// Emergency level enum for patient triage
enum EmergencyLevel {
  CRITICAL, // Immediate life-threatening
  HIGH, // Severe but stable
  MEDIUM, // Urgent but not critical
  LOW, // Non-urgent
}
